--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
           
       - name: Install dependencies
-        run: npm ci
+        run: npm install
         
       - name: Run tests
         run: npm test --if-present
@@ -72,7 +72,7 @@ jobs:
           
       - name: Update package.json and commit
         run: |
-          git add package.json package-lock.json
+          git add package.json
           git commit -m "chore: release ${{ steps.version.outputs.version }}"
           git tag ${{ steps.version.outputs.version }}
           git push origin main --follow-tags
