--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "package": "svelte-kit sync && svelte-package && publint",
     "prepublishOnly": "npm run package",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "npm run check",
+    "lint:fix": "npm run check"
   },
   "peerDependencies": {
     "svelte": "^5.0.0"
