--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -56,19 +56,40 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
-      - name: Bump pre-release version
+      - name: Bump version
         id: version
         run: |
           if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            PRERELEASE_TYPE="${{ github.event.inputs.prerelease_type }}"
+            case "${{ github.event.inputs.prerelease_type }}" in
+              "alpha"|"beta"|"rc")
+                RELEASE_TYPE="prerelease"
+                PREID="${{ github.event.inputs.prerelease_type }}"
+                ;;
+              *)
+                RELEASE_TYPE="patch"
+                PREID=""
+                ;;
+            esac
           else
-            PRERELEASE_TYPE="prerelease"
+            # Auto-detect release type based on commit messages for stable releases
+            if git log --format="%B" -n 1 | grep -E "^(BREAKING CHANGE|feat!|fix!|chore!)"; then
+              RELEASE_TYPE="major"
+            elif git log --format="%B" -n 1 | grep -E "^feat"; then
+              RELEASE_TYPE="minor"
+            else
+              RELEASE_TYPE="patch"
+            fi
+            PREID=""
           fi
           
-          echo "Pre-release type: $PRERELEASE_TYPE"
+          echo "Release type: $RELEASE_TYPE"
           
-          # Create pre-release version
-          NEW_VERSION=$(npm version $PRERELEASE_TYPE --preid=next --no-git-tag-version)
+          # Create version (stable or prerelease)
+          if [ -n "$PREID" ]; then
+            NEW_VERSION=$(npm version $RELEASE_TYPE --preid=$PREID --no-git-tag-version)
+          else
+            NEW_VERSION=$(npm version $RELEASE_TYPE --no-git-tag-version)
+          fi
           echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "New version: $NEW_VERSION"
           
@@ -120,7 +141,13 @@ jobs:
           draft: false
           prerelease: true
           
-      - name: Publish to NPM (next tag)
-        run: npm publish --access public --tag next
+      - name: Publish to NPM
+        run: |
+          # Publish with appropriate tag
+          if [[ "${{ steps.version.outputs.version }}" == *"-alpha"* ]] || [[ "${{ steps.version.outputs.version }}" == *"-beta"* ]] || [[ "${{ steps.version.outputs.version }}" == *"-rc"* ]]; then
+            npm publish --access public --tag next
+          else
+            npm publish --access public --tag latest
+          fi
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPMTOKEN }}
