--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,39 +1,39 @@
 name: CI
 
-on:
-  pull_request:
-    branches: [main, next, develop]
-  push:
-    branches: [next, develop]
+# on:
+#   pull_request:
+#     branches: [main, next, develop]
+#   push:
+#     branches: [next, develop]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+
     strategy:
       matrix:
         node-version: [18, 20]
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
       - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          
+
       - name: Install dependencies
         run: npm install
-        
+
       - name: Run linting
         run: npm run check --if-present
-        
+
       - name: Run tests
         run: npm test --if-present
-        
+
       - name: Build package
         run: npm run build
-        
+
       - name: Check package
         run: npm run package
